// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`generation prompt golden master > creative prompt is unchanged 1`] = `
"Create a 3-day Egypt itinerary.


=================================================================
EGYPTIAN TRAVEL INDUSTRY ABBREVIATIONS - COMPREHENSIVE GLOSSARY
=================================================================

CRITICAL: You MUST decode these abbreviations and follow the itinerary EXACTLY as written.
DO NOT add, remove, or reorder any activities. Convert ONLY what is written.

-----------------------------------------------------------------
AIRPORT & CITY CODES (IATA CODES)
-----------------------------------------------------------------
CAI = Cairo (Cairo International Airport)
ALX / ALY = Alexandria (Borg El Arab Airport)
ASW = Aswan (Aswan International Airport)
LXR = Luxor (Luxor International Airport)
HRG = Hurghada (Hurghada International Airport)
SSH = Sharm El Sheikh (Sharm El Sheikh International Airport)
RMF = Marsa Alam (Marsa Alam International Airport)
ABS = Abu Simbel (Abu Simbel Airport)
ATZ = Assiut (Assiut Airport)
MUH = Marsa Matrouh (Marsa Matrouh Airport)
PSD = Port Said (Port Said Airport)
TCP = Taba (Taba International Airport)
SKV = St. Catherine (St. Catherine International Airport)
HMB = Sohag (Sohag International Airport)
SPX = Sphinx/Giza (Sphinx International Airport)
DBB = Dabaa / El Alamein area
DAK = Dakhla Oasis (Dakhla Oasis Airport)
AAC = El Arish (El Arish International Airport)
EGH = El Gora (El Gora Airport)
UVL = El Kharga (El Kharga Airport)

COMMON CITY ABBREVIATIONS (non-IATA):
GZA = Giza
KOM = Kom Ombo
EDU / EDFU = Edfu
ESN = Esna
ABY = Abydos
DEN = Dendera
SAQ = Saqqara / Sakkara
MEM = Memphis
FAY = Fayoum
SIW = Siwa Oasis

-----------------------------------------------------------------
AIRLINE CODES (IATA)
-----------------------------------------------------------------
MS = EgyptAir (Egypt's national carrier)
BA = British Airways
TK = Turkish Airlines
QR = Qatar Airways
EK = Emirates
EY = Etihad Airways
LH = Lufthansa
AF = Air France
KL = KLM Royal Dutch
IB = Iberia
AZ = Alitalia / ITA Airways
SU = Aeroflot
FZ = FlyDubai
G9 = Air Arabia
XY = flynas
SV = Saudia (Saudi Arabian Airlines)
RJ = Royal Jordanian
ME = Middle East Airlines
GF = Gulf Air
WY = Oman Air
KU = Kuwait Airways
OS = Austrian Airlines
LX = Swiss International
SK = Scandinavian Airlines
AY = Finnair
LO = LOT Polish Airlines
NP = Nile Air (Egyptian low-cost)
SM = Air Cairo

-----------------------------------------------------------------
ACCOMMODATION CODES
-----------------------------------------------------------------
NTS = Nights (e.g., "3NTS" = 3 nights stay)
HTL = Hotel
CRZ = Cruise / Nile Cruise
OVN = Overnight
C/IN = Check-in
C/OUT = Check-out (disembarkation from cruise)

MEAL PLANS:
RO = Room Only (no meals)
BB = Bed & Breakfast (breakfast only)
HB = Half Board (breakfast + dinner)
FB = Full Board (breakfast + lunch + dinner)
AI = All Inclusive (all meals + drinks + snacks)
UAI = Ultra All Inclusive (premium AI with top-shelf drinks, room service)
SC = Self Catering

-----------------------------------------------------------------
DAY & TIME NOTATION
-----------------------------------------------------------------
D1, D2, D3... = Day 1, Day 2, Day 3...
"D1 CAI" = Day 1 in Cairo
"D3 CAI/ASW" = Day 3: Travel from Cairo to Aswan
"/" between cities = transfer/travel between those cities
@ = at (time), e.g., "arrive @05:10" = arrive at 05:10

-----------------------------------------------------------------
CRITICAL: ENTRANCE FEE LOGIC
-----------------------------------------------------------------
DEFAULT: Any site mentioned by name = Entrance fee INCLUDED automatically
(OUTSIDE) = NO entrance fee - photo stop only, viewing from outside

Examples:
- "Pyramids" = Entrance fee included (default)
- "Pompey's Pillar" = Entrance fee included (default)
- "Alexandria Library (OUTSIDE)" = Photo stop ONLY, NO entrance fee

-----------------------------------------------------------------
FREE DAYS AND SAILING DAYS
-----------------------------------------------------------------
When a day shows ONLY the location with NO activities:
- "D5 CRZ" = Sailing day on cruise (no tours, relaxing on board)
- "D8 HRG" = Free day in Hurghada (no scheduled activities)

Convert these to:
- Sailing days: title = "Sailing Day" or "Day at Leisure on Nile"
- Free days: title = "Free Day" or "Day at Leisure"

-----------------------------------------------------------------
MEALS IN ITINERARY
-----------------------------------------------------------------
B = Breakfast
L = Lunch
D = Dinner
"L" at end of day = Lunch included
"Chinese Dinner" = Dinner at Chinese restaurant
"Pigeon Lunch" = Lunch featuring Egyptian pigeon dish

-----------------------------------------------------------------
AIRPORT & HOTEL SERVICES (EGYPT TRAVEL INDUSTRY STANDARD)
-----------------------------------------------------------------

AIRPORT SERVICES (add when flights arrive/depart):
- International arrival: Airport meet & assist, visa assistance, luggage help, transfer to vehicle
- Domestic arrival: Airport meet & assist, luggage help, transfer to vehicle
- Departure: Hotel to airport transfer, check-in assistance

HOTEL SERVICES (add when):
- Check-in to hotel (first time in a city)
- Check-out from hotel (leaving city)
- Check-in to cruise (C/IN CRZ, "check in CRZ")
- Check-out from cruise (C/OUT CRZ)
- Moving from one city to another

-----------------------------------------------------------------
COMMON PATTERNS - EXAMPLES
-----------------------------------------------------------------
"2NTS CAI + 3NTS CRZ + 3NTS HRG"
= 2 nights Cairo + 3 nights Cruise + 3 nights Hurghada
= Total: 2+3+3 = 8 nights = 9 DAYS

"D1 CAI/ALX/CAI Arrive MS956@05:10, Pompey's Pillar, Library (OUTSIDE), L, back to CAI"
= Day 1: Arrive Cairo, then FULL DAY TRIP to Alexandria with sites, lunch, return to Cairo
= This is NOT just arrival - it's arrival + full day tour!

"D5 CRZ" (with nothing else)
= Day 5: Sailing day, no activities, relaxing on cruise

"D8 HRG" (with nothing else)
= Day 8: Free day in Hurghada, no scheduled activities

"C/OUT CRZ, LXR/HRG" = Check out of cruise, then travel from Luxor to Hurghada

-----------------------------------------------------------------
IMPORTANT CALCULATION RULE
-----------------------------------------------------------------
Number of DAYS = Number of NIGHTS + 1

Example: "2NTS CAI + 3NTS CRZ + 3NTS HRG"
- Nights: 2 + 3 + 3 = 8 nights
- Days: 8 + 1 = 9 days (D1 through D9)

-----------------------------------------------------------------
CRITICAL RULE: FOLLOW EXACTLY
-----------------------------------------------------------------
DO NOT add attractions not mentioned in the original!
DO NOT reorder days!
DO NOT skip any day!
If Abu Simbel is NOT mentioned, do NOT add it!
If a day just says "CRZ", it's a SAILING day with NO tours!
=================================================================


CLIENT: Test Client
TOUR: Test Tour
DATE: 2026-12-01
TRAVELERS: 2 adults
TIER: STANDARD (comfortable mid-range)
CITIES: Cairo
INTERESTS: history


═══════════════════════════════════════════════════════════════
🎯 DATABASE ATTRACTION MENU (CRITICAL — use EXACT canonical names!)
═══════════════════════════════════════════════════════════════
Below is the COMPLETE list of attractions and activities with pricing in the database.
Each item shows its CANONICAL name (the one you MUST use), its type [entrance] or [activity],
and any known aliases in parentheses.

RULES:
1. ALWAYS use the CANONICAL name (the main name before [entrance]/[activity]), NEVER an alias
2. If a common name is listed as an alias, use the canonical name instead
   (e.g., "Temple of Horus" is an alias → use "Edfu Temple")
3. Combined tickets: "Giza Plateau" covers Pyramids + Sphinx — use ONE entry "Giza Plateau"
4. [entrance] = ticketed site with entrance fee → put in attractions[]
5. [activity] = bookable activity with activity rate → put in attractions[]
6. Anything NOT in this list = photo stop or non-ticketed → put in photo_stops[], NOT attractions[]
7. Do NOT invent attraction names. If it's not listed here, it doesn't have pricing.
8. Only select attractions from cities the client is visiting.

Giza Plateau [entrance]
═══════════════════════════════════════════════════════════════

CONTENT:
test content
WRITING RULES:
- test rule

CONTENT USAGE RULE:
When describing attractions listed in the CURATED CONTENT LIBRARY above,
use the provided descriptions and highlights as the basis for your writing.
Adapt the curated text to fit naturally within the day narrative, but preserve
the brand voice, key details, and factual information. Do NOT invent descriptions
for attractions that have curated content available.

PACKAGE INCLUDES:
- Transportation: Yes (private vehicle)
- Guide: Yes (English speaking)
- Entrance Fees: Yes (all attractions in the "attractions" array get entrance fees automatically)

ENTRANCE FEE RULE:
- All sites in "attractions" array = entrance fee included (default)
- If a site is a photo stop only (outside viewing), add it to "photo_stops" array instead
- Lunch: Yes
- Dinner: No
- Hotels: Yes (except last day)

PLANNING GUIDELINES:
1. Create a logical flow between cities (don't jump around)
2. First day typically arrival + lighter activities
3. Last day typically departure transfer
4. Group nearby attractions on the same day
5. Include realistic driving times
6. For standard tier: comfortable mid-range

CRUISE TRANSPORT BUNDLE (if cruise days exist):
On cruise days, the following are INCLUDED in the bundled cruise transport package.
They are NOT separate attractions or activities — do NOT put them in attractions[] or photo_stops[]:
- Felucca ride / Felucca sailboat ride (included in cruise transport)
- Horse carriage ride (included in cruise transport)
- Motorboat ride (included in cruise transport)
- Camel ride (included in cruise transport)
If mentioning these, describe them in the day description but NOT in attractions[].

CRITICAL CONSTRAINTS:
- ONLY use cities from the CITIES list above. Do NOT add cities not mentioned.
- If no Nile Cruise / CRZ is mentioned, do NOT create a cruise itinerary.
- If no Aswan/Luxor is mentioned, do NOT add Upper Egypt destinations.
- Stay faithful to the client's request — do not "improve" by adding unrelated destinations.
- Do NOT generate a Nile Cruise unless the client explicitly asks for one.

LANGUAGE: Write ALL content in ENGLISH.
- ALL text must be in English
- ALL attraction names MUST be in English (no Japanese, Arabic, or other scripts)

Return ONLY valid JSON:
{
  "trip_name": "Descriptive Trip Name",
  "total_days": 3,
  "days": [
    {
      "day_number": 1,
      "title": "Day 1: Arrival in Cairo",
      "description": "Professional 2-3 sentence description of the day",
      "city": "Cairo",
      "overnight_city": "Cairo",
      "is_arrival": true,
      "is_departure": false,
      "is_transfer_only": false,
      "attractions": ["Exact Attraction Name"],
      "photo_stops": [],
      "is_cruise_day": false,
      "accommodation_type": "hotel",
      "guide_required": true,
      "includes_lunch": true,
      "includes_dinner": false,
      "includes_hotel": true
    }
  ]
}

Use EXACT attraction names from the provided list. Set includes_hotel to false on the last day.
For cruise packages: set is_cruise_day: true and accommodation_type: "cruise" for all days on the Nile cruise."
`;

exports[`generation prompt golden master > structured prompt is unchanged 1`] = `
"You are a DATA CONVERTER. Your ONLY task is to convert an existing itinerary into JSON format.

⛔ THIS IS NOT A CREATIVE TASK ⛔
You are NOT designing an itinerary. You are CONVERTING an existing one.
The input may be in Egyptian travel shorthand (D1 CAI, D2 ALX) OR in full prose English (Day 1 Arrival in Cairo...).
Either way, your job is the SAME: extract EXACTLY what is described and convert to JSON.


=================================================================
EGYPTIAN TRAVEL INDUSTRY ABBREVIATIONS - COMPREHENSIVE GLOSSARY
=================================================================

CRITICAL: You MUST decode these abbreviations and follow the itinerary EXACTLY as written.
DO NOT add, remove, or reorder any activities. Convert ONLY what is written.

-----------------------------------------------------------------
AIRPORT & CITY CODES (IATA CODES)
-----------------------------------------------------------------
CAI = Cairo (Cairo International Airport)
ALX / ALY = Alexandria (Borg El Arab Airport)
ASW = Aswan (Aswan International Airport)
LXR = Luxor (Luxor International Airport)
HRG = Hurghada (Hurghada International Airport)
SSH = Sharm El Sheikh (Sharm El Sheikh International Airport)
RMF = Marsa Alam (Marsa Alam International Airport)
ABS = Abu Simbel (Abu Simbel Airport)
ATZ = Assiut (Assiut Airport)
MUH = Marsa Matrouh (Marsa Matrouh Airport)
PSD = Port Said (Port Said Airport)
TCP = Taba (Taba International Airport)
SKV = St. Catherine (St. Catherine International Airport)
HMB = Sohag (Sohag International Airport)
SPX = Sphinx/Giza (Sphinx International Airport)
DBB = Dabaa / El Alamein area
DAK = Dakhla Oasis (Dakhla Oasis Airport)
AAC = El Arish (El Arish International Airport)
EGH = El Gora (El Gora Airport)
UVL = El Kharga (El Kharga Airport)

COMMON CITY ABBREVIATIONS (non-IATA):
GZA = Giza
KOM = Kom Ombo
EDU / EDFU = Edfu
ESN = Esna
ABY = Abydos
DEN = Dendera
SAQ = Saqqara / Sakkara
MEM = Memphis
FAY = Fayoum
SIW = Siwa Oasis

-----------------------------------------------------------------
AIRLINE CODES (IATA)
-----------------------------------------------------------------
MS = EgyptAir (Egypt's national carrier)
BA = British Airways
TK = Turkish Airlines
QR = Qatar Airways
EK = Emirates
EY = Etihad Airways
LH = Lufthansa
AF = Air France
KL = KLM Royal Dutch
IB = Iberia
AZ = Alitalia / ITA Airways
SU = Aeroflot
FZ = FlyDubai
G9 = Air Arabia
XY = flynas
SV = Saudia (Saudi Arabian Airlines)
RJ = Royal Jordanian
ME = Middle East Airlines
GF = Gulf Air
WY = Oman Air
KU = Kuwait Airways
OS = Austrian Airlines
LX = Swiss International
SK = Scandinavian Airlines
AY = Finnair
LO = LOT Polish Airlines
NP = Nile Air (Egyptian low-cost)
SM = Air Cairo

-----------------------------------------------------------------
ACCOMMODATION CODES
-----------------------------------------------------------------
NTS = Nights (e.g., "3NTS" = 3 nights stay)
HTL = Hotel
CRZ = Cruise / Nile Cruise
OVN = Overnight
C/IN = Check-in
C/OUT = Check-out (disembarkation from cruise)

MEAL PLANS:
RO = Room Only (no meals)
BB = Bed & Breakfast (breakfast only)
HB = Half Board (breakfast + dinner)
FB = Full Board (breakfast + lunch + dinner)
AI = All Inclusive (all meals + drinks + snacks)
UAI = Ultra All Inclusive (premium AI with top-shelf drinks, room service)
SC = Self Catering

-----------------------------------------------------------------
DAY & TIME NOTATION
-----------------------------------------------------------------
D1, D2, D3... = Day 1, Day 2, Day 3...
"D1 CAI" = Day 1 in Cairo
"D3 CAI/ASW" = Day 3: Travel from Cairo to Aswan
"/" between cities = transfer/travel between those cities
@ = at (time), e.g., "arrive @05:10" = arrive at 05:10

-----------------------------------------------------------------
CRITICAL: ENTRANCE FEE LOGIC
-----------------------------------------------------------------
DEFAULT: Any site mentioned by name = Entrance fee INCLUDED automatically
(OUTSIDE) = NO entrance fee - photo stop only, viewing from outside

Examples:
- "Pyramids" = Entrance fee included (default)
- "Pompey's Pillar" = Entrance fee included (default)
- "Alexandria Library (OUTSIDE)" = Photo stop ONLY, NO entrance fee

-----------------------------------------------------------------
FREE DAYS AND SAILING DAYS
-----------------------------------------------------------------
When a day shows ONLY the location with NO activities:
- "D5 CRZ" = Sailing day on cruise (no tours, relaxing on board)
- "D8 HRG" = Free day in Hurghada (no scheduled activities)

Convert these to:
- Sailing days: title = "Sailing Day" or "Day at Leisure on Nile"
- Free days: title = "Free Day" or "Day at Leisure"

-----------------------------------------------------------------
MEALS IN ITINERARY
-----------------------------------------------------------------
B = Breakfast
L = Lunch
D = Dinner
"L" at end of day = Lunch included
"Chinese Dinner" = Dinner at Chinese restaurant
"Pigeon Lunch" = Lunch featuring Egyptian pigeon dish

-----------------------------------------------------------------
AIRPORT & HOTEL SERVICES (EGYPT TRAVEL INDUSTRY STANDARD)
-----------------------------------------------------------------

AIRPORT SERVICES (add when flights arrive/depart):
- International arrival: Airport meet & assist, visa assistance, luggage help, transfer to vehicle
- Domestic arrival: Airport meet & assist, luggage help, transfer to vehicle
- Departure: Hotel to airport transfer, check-in assistance

HOTEL SERVICES (add when):
- Check-in to hotel (first time in a city)
- Check-out from hotel (leaving city)
- Check-in to cruise (C/IN CRZ, "check in CRZ")
- Check-out from cruise (C/OUT CRZ)
- Moving from one city to another

-----------------------------------------------------------------
COMMON PATTERNS - EXAMPLES
-----------------------------------------------------------------
"2NTS CAI + 3NTS CRZ + 3NTS HRG"
= 2 nights Cairo + 3 nights Cruise + 3 nights Hurghada
= Total: 2+3+3 = 8 nights = 9 DAYS

"D1 CAI/ALX/CAI Arrive MS956@05:10, Pompey's Pillar, Library (OUTSIDE), L, back to CAI"
= Day 1: Arrive Cairo, then FULL DAY TRIP to Alexandria with sites, lunch, return to Cairo
= This is NOT just arrival - it's arrival + full day tour!

"D5 CRZ" (with nothing else)
= Day 5: Sailing day, no activities, relaxing on cruise

"D8 HRG" (with nothing else)
= Day 8: Free day in Hurghada, no scheduled activities

"C/OUT CRZ, LXR/HRG" = Check out of cruise, then travel from Luxor to Hurghada

-----------------------------------------------------------------
IMPORTANT CALCULATION RULE
-----------------------------------------------------------------
Number of DAYS = Number of NIGHTS + 1

Example: "2NTS CAI + 3NTS CRZ + 3NTS HRG"
- Nights: 2 + 3 + 3 = 8 nights
- Days: 8 + 1 = 9 days (D1 through D9)

-----------------------------------------------------------------
CRITICAL RULE: FOLLOW EXACTLY
-----------------------------------------------------------------
DO NOT add attractions not mentioned in the original!
DO NOT reorder days!
DO NOT skip any day!
If Abu Simbel is NOT mentioned, do NOT add it!
If a day just says "CRZ", it's a SAILING day with NO tours!
=================================================================


═══════════════════════════════════════════════════════════════
⛔ FORBIDDEN ACTIONS - VIOLATING THESE IS A CRITICAL ERROR ⛔
═══════════════════════════════════════════════════════════════

1. FORBIDDEN: Adding attractions, cities, or activities NOT in the input
   - If Abu Simbel is not mentioned → DO NOT ADD IT
   - If Unfinished Obelisk is not mentioned → DO NOT ADD IT
   - If Aswan, Luxor, or a Nile Cruise is not mentioned → DO NOT ADD THEM
   - If the input says Cairo only → the output must be Cairo only

2. FORBIDDEN: Changing the itinerary type
   - If the input describes a HOTEL stay (e.g., "Marriott Mena House") → this is a LAND itinerary, NOT a cruise
   - If the input describes a Nile Cruise → keep it as a cruise
   - NEVER convert a hotel itinerary into a cruise or vice versa

3. FORBIDDEN: Removing or skipping activities from input
   - If Day 1 says "Alexandria tour" → Day 1 MUST include Alexandria
   - If Day 2 says "Pyramids & Museum" → Day 2 MUST include BOTH

4. FORBIDDEN: Reordering days or activities
   - Day 1 content goes in day_number: 1
   - Day 2 content goes in day_number: 2
   - NEVER put Day 1 content in day_number: 2

5. FORBIDDEN: "Improving" the itinerary
   - Do NOT add sites you think they "should" visit
   - Do NOT rearrange for "better flow"
   - Do NOT combine or split days
   - Do NOT add a Nile Cruise to a land-only itinerary

═══════════════════════════════════════════════════════════════
📋 EXACT DAY-BY-DAY INPUT TO CONVERT
═══════════════════════════════════════════════════════════════

DAY 1 INPUT (CONVERT THIS EXACTLY):
───
D1 CAI arrival
───

═══════════════════════════════════════════════════════════════
📋 FULL RAW ITINERARY (for reference)
═══════════════════════════════════════════════════════════════
D1 CAI arrival
D2 CAI/ALX/CAI day trip
D3 CAI departure

═══════════════════════════════════════════════════════════════
🔍 DECODING RULES
═══════════════════════════════════════════════════════════════

CITY CODES:
CAI=Cairo, ALX=Alexandria, ASW=Aswan, LXR=Luxor, HRG=Hurghada, CRZ=Cruise

MULTI-CITY PATTERN:
"D1 CAI/ALX/CAI" = Day trip: Arrive Cairo → Visit Alexandria → Return Cairo
This is NOT just "Arrival" - it's arrival PLUS a FULL DAY TOUR!

DAY TRIPS (CRITICAL):
If the input mentions visiting a city and then RETURNING to the base hotel:
- "day trip to Alexandria" → overnight_city = base hotel city (e.g., "Cairo"), NOT "Alexandria"
- "return to Cairo" or "back to [city]" → confirms it's a day trip
- cities_visited = ["Cairo", "Alexandria"] but overnight_city = "Cairo"
- The hotel stay remains in the base city throughout

ARRIVAL DAYS (CRITICAL):
If the FIRST day is just "arrival" + "transfer to hotel" with NO sightseeing:
- is_arrival: true, is_transfer_only: true
- attractions: [] (EMPTY — do NOT list nearby landmarks)
- guide_required: false
- needs_airport_service: true, needs_hotel_service: true
If the first day has BOTH arrival AND sightseeing (e.g., "D1 CAI/ALX/CAI"):
- is_arrival: true, is_transfer_only: false
- List actual visited sites in attractions[]
- guide_required: true
- needs_airport_service: true, needs_hotel_service: true

DEPARTURE/FAREWELL DAYS (CRITICAL):
If input mentions "farewell", "departure", "airport transfer", "final breakfast":
- is_departure: true, is_transfer_only: true
- attractions: [] (EMPTY — do NOT list nearby landmarks)
- guide_required: false
- needs_airport_service: true, needs_hotel_service: true
- overnight_city should be the departure city (usually Cairo)

TRANSFER-ONLY RULE:
When is_transfer_only is true, the attractions array MUST be empty [].
Do NOT add landmarks just because the traveler can "see" them from the car/hotel.
A "glimpse of the pyramids" is NOT the same as "visiting the pyramids".

ENTRANCE FEE LOGIC:
DEFAULT: Any attraction that is actually VISITED (entered) = add to attractions[]
(OUTSIDE) = Photo stop only → add to photo_stops[] (NO entrance fee)
Do NOT use an "entrance_included" array. The "attractions" array IS the entrance fee list.
Only sites explicitly marked (OUTSIDE) go into photo_stops[] and are excluded from fees.

═══════════════════════════════════════════════════════════════
🎯 DATABASE ATTRACTION MENU (CRITICAL — use EXACT canonical names!)
═══════════════════════════════════════════════════════════════
Below is the COMPLETE list of attractions and activities with pricing in the database.
Each item shows its CANONICAL name (the one you MUST use), its type [entrance] or [activity],
and any known aliases in parentheses.

RULES:
1. ALWAYS use the CANONICAL name (the main name before [entrance]/[activity]), NEVER an alias
2. If the input mentions "Temple of Horus", look up that it's an alias for "Edfu Temple" → use "Edfu Temple"
3. If the input mentions "Pyramids" or "Sphinx", these are covered by "Giza Plateau" → use "Giza Plateau" (ONE entry, not two)
4. [entrance] = ticketed site with entrance fee → put in attractions[]
5. [activity] = bookable activity with activity rate → put in attractions[]
6. Anything NOT in this list = photo stop or non-ticketed → put in photo_stops[], NOT attractions[]
7. Do NOT invent attraction names. If it's not listed here, it doesn't have pricing.

Giza Plateau [entrance]
Egyptian Museum [entrance]

MEAL VENUES vs ATTRACTIONS (CRITICAL):
Restaurants, markets, and bazaars where tourists EAT are NOT attractions.
Do NOT add these to attractions[]:
- "Fish Market" (when it's for lunch/dinner, not sightseeing)
- Restaurant names
- "Khan El Khalili" (when it's for shopping/dining, not a guided visit with entrance fee)
If a place is BOTH a dining venue AND a tourist site, only add it to attractions[]
if the traveler is actually entering and touring it (not just eating there).

FREE DAYS:
"D5 CRZ" with nothing else = Sailing day → is_free_day: true, is_sailing_day: true
"D8 HRG" with nothing else = Free day → is_free_day: true

MEALS:
L = Lunch included
D = Dinner included
"Chinese Dinner" = Dinner at Chinese restaurant
"Pigeon Lunch" = Lunch with Egyptian pigeon dish

FLIGHTS:
MS956@05:10 = EgyptAir flight 956 at 05:10
"DEPARTED BY MS955@23:20" = Departure flight at 23:20

DOMESTIC FLIGHTS (between Egyptian cities, e.g., Cairo→Aswan, Luxor→Cairo):
- transport_type: "flight"
- flight_info: "MS956 arriving 05:10" (airline code + time)
- needs_airport_service: true (airport services needed at BOTH ends)
- is_arrival: false, is_departure: false (these are for international only)
- Guide is NOT needed during the flight/transfer portions
- If sightseeing happens after landing, set guide_required: true and list attractions normally

INTERCITY ROAD TRANSFERS (driving between cities, e.g., Aswan→Luxor, Luxor→Hurghada, Cairo→Alexandria overnight):
- The "city" field must reflect the DESTINATION city (where the day ends)
- The "overnight_city" must be the city where the traveler sleeps that night
- needs_hotel_service: true (check-out at origin, check-in at destination)
- If sightseeing at the destination: guide_required: true and list attractions normally
- If transfer only (no sightseeing): is_transfer_only: true
- This is DIFFERENT from a day trip — a day trip returns to the same city (overnight_city stays the same)
- NOTE: Do NOT confuse intercity road transfers with day trips. "Drive to Luxor" = intercity. "Day trip to Alexandria and return" = day trip.

═══════════════════════════════════════════════════════════════
⚙️ CONFIGURATION
═══════════════════════════════════════════════════════════════
TOTAL DAYS: 3
TIER: STANDARD
TRAVELERS: 2
LANGUAGE: English
PACKAGE: full-package


⚠️ LANGUAGE: Write ALL content (trip_name, title, description) in ENGLISH.
- ALL attraction names MUST be in English
- Do NOT use Japanese, Arabic, or any non-Latin characters
- City names in English

═══════════════════════════════════════════════════════════════
📝 DESCRIPTION WRITING GUIDELINES
═══════════════════════════════════════════════════════════════
When writing the "description" field for each day, use the curated descriptions
below as source material. Adapt them to fit the day's specific activities but
preserve the brand voice and key factual details from the content library.
Do NOT invent details for attractions that have curated content available.

CONTENT:
test content
WRITING RULES:
- test rule
═══════════════════════════════════════════════════════════════
📤 OUTPUT FORMAT (Return ONLY valid JSON)
═══════════════════════════════════════════════════════════════

{
  "trip_name": "Egypt: Cairo, Nile Cruise & Hurghada",
  "total_days": 3,
  "days": [
    {
      "day_number": 1,
      "date": null,
      "title": "Day 1: Arrival & Alexandria Day Trip",
      "description": "2-3 sentences describing ONLY what is in the input",
      "city": "Cairo",
      "cities_visited": ["Cairo", "Alexandria"],
      "overnight_city": "Cairo",
      "accommodation_type": "hotel",

      "is_arrival": true,
      "is_departure": false,
      "is_transfer_only": false,
      "is_free_day": false,
      "is_cruise_day": false,
      "is_sailing_day": false,

      "attractions": ["Pompey's Pillar", "Qaitbay Citadel", "Alexandria Library", "Montazah Park"],
      "photo_stops": ["Alexandria Library"],

      "activities": ["Airport arrival", "Transfer to Alexandria", "Visit Pompey's Pillar", "Visit Qaitbay Citadel", "Photo stop at Alexandria Library", "Visit Montazah Park", "Lunch", "Return to Cairo", "Dinner"],
      "guide_required": true,

      "includes_lunch": true,
      "includes_dinner": true,
      "meal_notes": null,

      "flight_info": "MS956 arriving 05:10",
      "transport_type": "flight",

      "needs_airport_service": true,
      "needs_hotel_service": true
    }
  ]
}

═══════════════════════════════════════════════════════════════
✅ VERIFICATION CHECKLIST (Complete before responding)
═══════════════════════════════════════════════════════════════

□ I have exactly 3 day objects in my response
□ Day 1 contains ALL activities from D1/Day 1 input (not just "arrival")
□ Day 2 contains ALL activities from D2/Day 2 input
□ Each day's content matches ONLY what was in that day's input
□ I did NOT add Abu Simbel, Unfinished Obelisk, or other sites not mentioned
□ DAY TRIPS: If input says "return to Cairo" or "back to [city]", the overnight_city is the RETURN city, NOT the visited city
□ OVERNIGHT CITIES: If the hotel is in Cairo and they take a day trip, overnight_city = "Cairo" (not the day-trip destination)
□ ARRIVAL DAY: First day of multi-day package has is_arrival: true, needs_airport_service: true, needs_hotel_service: true
□ ARRIVAL DAY: If first day has NO sightseeing (just arrival+transfer), set is_transfer_only: true, attractions: []
□ DEPARTURE DAY: Last day has is_departure: true, needs_airport_service: true, needs_hotel_service: true
□ DEPARTURE DAY: If last day has NO sightseeing (just farewell/transfer), set is_transfer_only: true, attractions: []
□ TRANSFER-ONLY: When is_transfer_only is true, attractions MUST be [] and guide_required MUST be false
□ MEAL VENUES: Restaurants and dining venues (Fish Market, etc.) are NOT in attractions[]
□ ALL attraction names are in ENGLISH (no Japanese, Arabic, or other non-Latin names)
□ Free/sailing days have is_free_day: true
□ ALL attractions are in the attractions[] array (entrance fees apply by default)
□ ONLY sites explicitly marked (OUTSIDE) are in photo_stops[] (NO fee)
□ There is NO "entrance_included" array in the output
□ Flight arrivals have needs_airport_service: true
□ Domestic flights between cities: transport_type: "flight", needs_airport_service: true, is_arrival: false, is_departure: false
□ Intercity road transfers: city = destination city, overnight_city = destination city, needs_hotel_service: true
□ Day trips: city = destination BUT overnight_city = BASE city (traveler returns to same hotel)
□ The last day with activities includes everything mentioned (not just "departure")

NOW CONVERT THE ITINERARY TO JSON:"
`;
